--- a/src/GUI/3DViewer/viewer.ui
+++ b/src/GUI/3DViewer/viewer.ui
@@ -1872,6 +1872,19 @@ border-bottom-left-radius:0px;
      </widget>
     </widget>
    </widget>
+   <widget class="QPushButton" name="testButton">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>280</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
