--- a/src/GUI/3DViewer/viewer.ui
+++ b/src/GUI/3DViewer/viewer.ui
@@ -20,7 +20,7 @@
       <x>10</x>
       <y>10</y>
       <width>221</width>
-      <height>947</height>
+      <height>852</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -193,7 +193,7 @@
        <x>10</x>
        <y>10</y>
        <width>201</width>
-       <height>31</height>
+       <height>30</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -1190,9 +1190,9 @@ color: rgb(154, 153, 150);
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>505</y>
+       <y>504</y>
        <width>201</width>
-       <height>68</height>
+       <height>51</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -1207,103 +1207,37 @@ color: rgb(154, 153, 150);
      <property name="title">
       <string>BACKGROUND COLOR</string>
      </property>
-     <widget class="QRadioButton" name="radioButton_background_white">
+     <widget class="QPushButton" name="pushButton_backgroundColor">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>20</y>
-        <width>100</width>
-        <height>23</height>
+        <width>201</width>
+        <height>30</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">QRadioButton {
+       <string notr="true">QPushButton {
 	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-right: 0px;
-	border-bottom: 0px;
-}</string>
-      </property>
-      <property name="text">
-       <string>White</string>
-      </property>
-      <property name="checked">
-       <bool>true</bool>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton_background_black">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>20</y>
-        <width>101</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-left: 0px;
-	border-bottom: 0px;
-}</string>
-      </property>
-      <property name="text">
-       <string>Black</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton_background_grey">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>45</y>
-        <width>91</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-right: 0px;
-	border-top: 0px;
+	background-color: rgb(224, 170, 255);
+	color: rgb(94, 92, 100);
+
 	border-radius: 10px;
 	border-top-right-radius:0px;
 	border-top-left-radius:0px;
-	border-bottom-right-radius:0px;
+}
+
+ QPushButton:hover {
+	background-color: rgb(226, 179, 255);
+}
+
+QPushButton:pressed {
+	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+											  stop: 0 #dadbde, stop: 1 #f6f7fa);
 }</string>
       </property>
       <property name="text">
-       <string>Grey</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton_background_green">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>45</y>
-        <width>101</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-left: 0px;
-	border-top: 0px;
-	border-radius: 10px;
-	border-top-right-radius:0px;
-	border-top-left-radius:0px;
-	border-bottom-left-radius: 0px;
-}</string>
-      </property>
-      <property name="text">
-       <string>Green</string>
+       <string>Choose color</string>
       </property>
      </widget>
     </widget>
@@ -1311,9 +1245,9 @@ color: rgb(154, 153, 150);
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>575</y>
+       <y>557</y>
        <width>201</width>
-       <height>169</height>
+       <height>128</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -1375,32 +1309,11 @@ color: rgb(154, 153, 150);
        <string>Dashed</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_4">
-      <property name="geometry">
-       <rect>
-        <x>6</x>
-        <y>70</y>
-        <width>191</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QLabel {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	qproperty-alignment: 'AlignVCenter | AlignCenter';
-	color: rgb(94, 92, 100);
-	background-color: rgb(246, 245, 244);
-}</string>
-      </property>
-      <property name="text">
-       <string>Color</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_5">
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>138</y>
+        <y>66</y>
         <width>101</width>
         <height>31</height>
        </rect>
@@ -1411,10 +1324,6 @@ color: rgb(154, 153, 150);
 	background-color: rgb(246, 245, 244);
 	border: 1px solid grey;
 	border-right: 0px;
-	border-radius: 10px;
-	border-top-right-radius:0px;
-	border-top-left-radius:0px;
-	border-bottom-right-radius:0px;
 }</string>
       </property>
       <property name="text">
@@ -1425,7 +1334,7 @@ color: rgb(154, 153, 150);
       <property name="geometry">
        <rect>
         <x>100</x>
-        <y>138</y>
+        <y>66</y>
         <width>101</width>
         <height>31</height>
        </rect>
@@ -1435,10 +1344,6 @@ color: rgb(154, 153, 150);
 	font: 700 12pt &quot;Pastelova Demo&quot;;
 background-color: rgb(246, 245, 244);
 border: 1px solid grey;
-border-radius:10px;
-border-top-right-radius:0px;
-border-top-left-radius:0px;
-border-bottom-left-radius:0px;
 }
 </string>
       </property>
@@ -1469,123 +1374,47 @@ border-bottom-left-radius:0px;
        <string>Type</string>
       </property>
      </widget>
-     <widget class="QWidget" name="widget_2" native="true">
+     <widget class="QPushButton" name="pushButton_edgeColor">
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>90</y>
-        <width>191</width>
-        <height>47</height>
+        <y>97</y>
+        <width>201</width>
+        <height>30</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(246, 245, 244);</string>
+       <string notr="true">QPushButton {
+	font: 700 16pt &quot;Pastelova Demo&quot;;
+	background-color: rgb(224, 170, 255);
+	color: rgb(94, 92, 100);
+
+	border-radius: 10px;
+	border-top-right-radius:0px;
+	border-top-left-radius:0px;
+}
+
+ QPushButton:hover {
+	background-color: rgb(226, 179, 255);
+}
+
+QPushButton:pressed {
+	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+											  stop: 0 #dadbde, stop: 1 #f6f7fa);
+}</string>
       </property>
-      <widget class="QRadioButton" name="radioButton_edgeColor_white">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>100</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-right: 0px;
-	border-bottom: 0px;
-	border-top: 0px;
-}</string>
-       </property>
-       <property name="text">
-        <string>White</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-       <property name="autoExclusive">
-        <bool>true</bool>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_edgeColor_black">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
-         <y>0</y>
-         <width>101</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-left: 0px;
-	border-bottom: 0px;
-	border-top: 0px;
-}</string>
-       </property>
-       <property name="text">
-        <string>Black</string>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_edgeColor_grey">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>25</y>
-         <width>100</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-top: 0px;
-	border-right: 0px;
-}</string>
-       </property>
-       <property name="text">
-        <string>Grey</string>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_edgeColor_green">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
-         <y>25</y>
-         <width>101</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-top: 0px;
-	border-left: 0px;
-}</string>
-       </property>
-       <property name="text">
-        <string>Green</string>
-       </property>
-      </widget>
+      <property name="text">
+       <string>Choose color</string>
+      </property>
      </widget>
     </widget>
     <widget class="QGroupBox" name="groupBox_5">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>746</y>
+       <y>687</y>
        <width>201</width>
-       <height>191</height>
+       <height>154</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -1649,32 +1478,11 @@ color: rgb(154, 153, 150);
        <string>Square</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_6">
-      <property name="geometry">
-       <rect>
-        <x>6</x>
-        <y>95</y>
-        <width>191</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QLabel {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	qproperty-alignment: 'AlignVCenter | AlignCenter';
-	color: rgb(94, 92, 100);
-	background-color: rgb(246, 245, 244);
-}</string>
-      </property>
-      <property name="text">
-       <string>Color</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_7">
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>160</y>
+        <y>92</y>
         <width>101</width>
         <height>31</height>
        </rect>
@@ -1685,10 +1493,6 @@ color: rgb(154, 153, 150);
 	background-color: rgb(246, 245, 244);
 	border: 1px solid grey;
 	border-right: 0px;
-	border-radius: 10px;
-	border-top-right-radius:0px;
-	border-top-left-radius:0px;
-	border-bottom-right-radius:0px;
 }</string>
       </property>
       <property name="text">
@@ -1699,7 +1503,7 @@ color: rgb(154, 153, 150);
       <property name="geometry">
        <rect>
         <x>100</x>
-        <y>160</y>
+        <y>92</y>
         <width>101</width>
         <height>31</height>
        </rect>
@@ -1709,10 +1513,6 @@ color: rgb(154, 153, 150);
 	font: 700 12pt &quot;Pastelova Demo&quot;;
 background-color: rgb(246, 245, 244);
 border: 1px solid grey;
-border-radius:10px;
-border-top-right-radius:0px;
-border-top-left-radius:0px;
-border-bottom-left-radius:0px;
 }
 </string>
       </property>
@@ -1764,126 +1564,40 @@ border-bottom-left-radius:0px;
        <string>No Vertex</string>
       </property>
      </widget>
-     <widget class="QWidget" name="widget_3" native="true">
+     <widget class="QPushButton" name="pushButton_vertexColor">
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>111</y>
+        <y>123</y>
         <width>201</width>
-        <height>46</height>
+        <height>30</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(246, 245, 244);</string>
+       <string notr="true">QPushButton {
+	font: 700 16pt &quot;Pastelova Demo&quot;;
+	background-color: rgb(224, 170, 255);
+	color: rgb(94, 92, 100);
+
+	border-radius: 10px;
+	border-top-right-radius:0px;
+	border-top-left-radius:0px;
+}
+
+ QPushButton:hover {
+	background-color: rgb(226, 179, 255);
+}
+
+QPushButton:pressed {
+	background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
+											  stop: 0 #dadbde, stop: 1 #f6f7fa);
+}</string>
       </property>
-      <widget class="QRadioButton" name="radioButton_vertexColor_white">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>100</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-right: 0px;
-	border-bottom: 0px;
-	border-top: 0px;
-}</string>
-       </property>
-       <property name="text">
-        <string>White</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_vertexColor_black">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
-         <y>0</y>
-         <width>101</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-left: 0px;
-	border-bottom: 0px;
-	border-top: 0px;
-}</string>
-       </property>
-       <property name="text">
-        <string>Black</string>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_vertexColor_grey">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>25</y>
-         <width>100</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-top: 0px;
-	border-right: 0px;
-}</string>
-       </property>
-       <property name="text">
-        <string>Grey</string>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_vertexColor_green">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
-         <y>25</y>
-         <width>101</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QRadioButton {
-	font: 700 16pt &quot;Pastelova Demo&quot;;
-	background-color: rgb(246, 245, 244);
-	border: 1px solid grey;
-	border-top: 0px;
-	border-left: 0px;
-}</string>
-       </property>
-       <property name="text">
-        <string>Green</string>
-       </property>
-      </widget>
+      <property name="text">
+       <string>Choose color</string>
+      </property>
      </widget>
     </widget>
-   </widget>
-   <widget class="QPushButton" name="testButton">
-    <property name="geometry">
-     <rect>
-      <x>500</x>
-      <y>280</y>
-      <width>89</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
