--- a/src/GUI/3DViewer/viewer.ui
+++ b/src/GUI/3DViewer/viewer.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>viewer</class>
- <widget class="QOpenGLWidget" name="viewer">
+ <widget class="QWidget" name="viewer">
   <property name="geometry">
    <rect>
     <x>0</x>
